@@ -1,5 +1,7 @@
 2014-08-31  Carl Hetherington  <cth@carlh.net>
 
+	* Add "copy" button to colour conversion presets editor (#399).
+
 	* Allow drag-and-drop of files onto the content list (#395).
 
 2014-08-29  Carl Hetherington  <cth@carlh.net>
